--- a/src/style.scss
+++ b/src/style.scss
@@ -10,3 +10,71 @@
 	color: #fff;
 	padding: 2px;
 }
+
+// html, body {
+// 	font-family: 'Raleway', sans-serif;
+// 	background-color: teal;
+//   }
+.video-header {
+	video {
+		width: 100dvw;
+		min-height: 100dvh;
+		position: absolute;
+		top: 0;
+		left: 0;
+		object-fit: cover;
+	}
+}
+
+.header-text {
+	position: absolute;
+	color: white;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	transform: translateY(-5rem);
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+
+	h1 {
+		font-weight: 400;
+		font-size: 1.75rem;
+		text-transform: uppercase;
+		line-height: 1;
+	}
+
+	span {
+		display: block;
+		font-weight: 900;
+		font-size: 6rem;
+	}
+}
+
+.description {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	color: white;
+	background-color: hsl(181deg 50% 20% / 70%);
+	padding: 2rem;
+
+	p {
+		max-width: 40rem;
+		margin-inline: auto;
+		line-height: 1.6;
+	}
+}
+
+.credit {
+	font-size: .75rem;
+
+	a {
+		color: white;
+		text-underline-offset: 2px;
+	}
+}
